cmake_minimum_required(VERSION 3.0)

project (ShoutVST)

set(LIBRARY_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/ShoutVST_DLL")

set(CMAKE_BUILD_TYPE Release)

if((${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC))
  set(MYFLAGS "/Ox /WX- /MT")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MYFLAGS}")
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${MYFLAGS}")
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MYFLAGS}")
  set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${MYFLAGS}")
endif()

SET(WITH_OGG ON CACHE BOOL "libshout: WITH_OGG option")
SET(WITH_VORBIS ON CACHE BOOL "libshout: WITH_VORBIS option")
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/deps)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/LIB)

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} SOURCES)

list (APPEND SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/ShoutVST.rc)

add_library(${PROJECT_NAME}  SHARED ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} VST_SDK shout vorbis lame_enc)

